<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.sxz.reaction.SignInFragment">


    <TextView
        android:id="@+id/sign_in_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/sign_in_email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email_placeholder_text"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/sign_in_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password_placeholder_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in_button"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/sign_in_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/sign_in_google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in_google_button"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/sign_in_anon_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_anon_button"
        tools:textAllCaps="false" />

</LinearLayout>
