<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group >
        <item
            android:id="@+id/drawer_user_history"
            android:icon="@drawable/ic_history"
            android:title="History" />
        <item
            android:id="@+id/drawer_user_profile"
            android:icon="@drawable/ic_person_outline"
            android:title="@string/drawer_user_profile" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_setting" />
        <item
            android:id="@+id/drawer_sign_out"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/drawer_sign_out" />
    </group>

</menu>
