<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="32dp"
    android:orientation="vertical"
    tools:context="com.sxz.reaction.ChangePasswordFragment">


    <EditText
        android:id="@+id/change_password_new_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_new_placeholder"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/change_password_new_repeat_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_new_repeat_placeholder"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change_password_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit_button"
        tools:textAllCaps="false" />
</LinearLayout>
